--- a/style.css
+++ b/style.css
@@ -1,13 +1,101 @@
-body::after {
-	display: block;
-	margin: 0 auto;
-	padding-top: 95px;
-	width: 150px;
-	height: 30px;
-	border-radius: 50px;
-	content: "text";
-	text-align: center;
-	text-shadow: 0 0 4px black;
-	font-size: 18px;
-	font-family: serif;
+body {
+	font-family: 'Cairo', sans-serif; 
+	min-height: 100vh; 
+	margin: 0; 
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+* {
+	box-sizing: border-box;
+ }
+
+ html {
+	scroll-behavior: smooth; 
+ }
+
+ .main {
+	display: flex;
+	flex-wrap: wrap;
+	color: rgb(33, 34, 21);
+	font-size: 20px;
+ }
+  .section {
+	width: 50%;
+	background: linear-gradient(to bottom, #eee6be, white);
+	padding: 50px;
+ }
+
+ @media (max-width: 768px) {
+	.section {
+	  width: 100%;
+	}
+ }
+
+ .header {
+	background-color: #e7dca6;
+	border-bottom: 10px solid rgb(202, 206, 143);
+	
+ }
+
+ .nav-list {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	list-style: none;
+ }
+ .nav-link {
+	padding: 0 20px;
+	line-height: 50px;
+	transition: .3s;
+	color: rgb(167, 172, 109);
+ }
+ .nav-link:visited {
+	color: rgb(141, 146, 89);
+ }
+.nav-link:hover{
+	background-color: rgb(207, 211, 148);
+ }
+
+ h1{
+	font-weight: bold;
+}
+ h2 {
+	 text-decoration: underline;
+ }
+ 
+ .code {
+	 background: linear-gradient(to top, #eee6be, white);
+	 padding: 10px;
+ }
+
+ .photo {
+	border: 5px solid rgb(208, 211, 160);
+	border-radius: 10px;
+ }
+
+ .contact-list {
+	list-style-type: square;
+	line-height: 50px;
+}
+.work-list {
+	list-style-type: none;
+}
+
+ .footer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #e3d799;
+ }
+.footer-link {
+	padding: 0 20px;
+	line-height: 50px;
+	transition: .3s;
+	color: rgb(65, 66, 50);
+ }
+ .footer-link:visited {
+	color: rgb(40, 41, 29);
  }
